Add a v.gd link for the slides.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<section>
 					<h2>Making Images Smarter</h2>
 					<p>Dynamic Image Manipulation Infrastructure for WordPress</p>
-					<p><a href="https://v.gd/wpsvg" target="_blank">v.gd/wpsvg</a></p>
+					<p><a href="https://v.gd/smarterimages" target="_blank">v.gd/smarterimages</a></p>
 				</section>
 				<section>
 					<h1>About Me</h1>
