Update the About Me slide.

--- a/index.html
+++ b/index.html
@@ -42,13 +42,17 @@
 					<p>Dynamic Image Manipulation Infrastructure for WordPress</p>
 					<p><a href="https://v.gd/smarterimages" target="_blank">v.gd/smarterimages</a></p>
 				</section>
-				<section>
-					<h1>About Me</h1>
+				<section
+					data-background-color="#ffffff"
+					data-background-image="img/russell-on-pogo-stick.jpg"
+					data-background-size="contain"
+					data-transition="fade"
+				>
+					<p style="padding-top: 85vh;">
+						<span style="background-color: rgba(255, 255, 255, 0.55); display: block; padding-bottom: 80px;">Russell Heimlich<br>(like the maneuver)</span>
+					</p>
 				</section>
-				<section>
-					<p>Russell Heimlich</p>
-					<img src="img/russell-and-zadie-in-car.jpg" style="max-width: 580px;">
-				</section>
+
 				<section>
 					<p>Lead Developer at Spirited Media</p>
 					<a href="https://billypenn.com" target="_blank">
